--- a/面试题总结.md
+++ b/面试题总结.md
@@ -179,6 +179,435 @@ public class Demo2 {
 }
 ```
 
+而重写是子类对父类非静态方法，非private修饰，非final修饰，非构造方法的重新编写，或者是子类对实现的接口中方法的重新编写。
+
+## Java序列化与反序列化
+
+序列化：将数据结构和**对象转化为可以存储或传输（转为Json字符串保存到redis/发送给前端）**的形式，通常是**二进制字节流，也可以是JSON，XML**等文本格式
+
+反序列化：将对象序列化后产生的数据转化为原始数据结构或对象的过程
+
+序列化和反序列化常见应用场景：
+
+- 对象在进行网络传输（比如远程方法调用 RPC 的时候）之前需要先被序列化，接收到序列化的对象之后需要再进行反序列化；
+- 将对象存储到文件之前需要进行序列化，将对象从文件中读取出来需要进行反序列化；
+- 将**对象存储到数据库（如 Redis）之前需要用到序列化，将对象从缓存数据库中读取出来需要反序列化**；
+- 将**对象存储到内存之前需要进行序列化，从内存中读取出来之后需要进行反序列化**。
+
+**总结：序列化的主要目的是通过网络传输对象或者说是将对象存储到文件系统、数据库、内存中**
+
+
+
+
+
+## HashMap和ConcurrentHashMap
+
+HashMap是线程不安全的，在多线程高并发的情况下，添加元素时可能会导致数据丢失的现象，两个线程同时添加元素，hash到了同一个位置，一天线程添加完后，另一个线程添加，数据就会丢失。
+
+ConcurrentHashMap是线程安全的，JDC1.7中是采用分段锁实现线程安全的，减少了锁的粒度，提高了并发性，而JDK1.8中采用的是Node数组+链表+红黑树，并发控制使用 Synchronized 和 CAS 来操作，CAS算法的基本思想就是不断比较当前内存中的变量值和你预期变量值是否相等，如果相等，则接受修改的值，否则拒绝你的而操作。因为当前线程中的值已经不是最新的值，你的修改很可能会覆盖掉其他线程修改的结果。
+
+
+
+
+
+
+
+
+
+## ArrayList和LinkedList
+
+ArrayList底层数据结构是**数组**，既然是数组那么就是在**O(1)**的时间复杂度进行**随机访问**，在插入和删除元素时需要移动其他元素。
+
+LinkedList底层是**双向链表**，所以**不支持随机访问**，时间复杂度是**O(n)**，在插入和删除元素时只需更改引用的指向即可，无需移动元素。节点不仅要存储数据，还要存储两个引用，所以更占内存。
+
+## HashSet和TreeSet
+
+两者都是set，所以其中中的元素不能重复，并且它们都是线程不安全的，二者的区别是：
+
+1. HashSet中的元素可以是null，但TreeSet中的元素不能是null；
+2. HashSet不能保证元素的排列顺序，而TreeSet支持自然排序、定制排序两种排序的方式；
+3. **HashSet**底层是采用**哈希表**实现的，而**TreeSet**底层是采用**红黑树**实现的。
+
+
+
+
+
+
+
+## 设计模式？
+
+**工厂模式：**
+
+一种创建对象的方式，而无需指定要创建的类，把创建对象的的逻辑封装在工厂类中，而不是直接在程序代码中直接实例化对象
+
+```java
+//定义一个接口
+public interface TrafficTools {
+
+    public void running();
+}
+//实现这个接口
+public class Airplane implements TrafficTools {
+    @Override
+    public void running() {
+        System.out.println("Airplane:这里是乘坐飞机！");
+    }
+}
+public class Bus implements TrafficTools {
+    @Override
+    public void running() {
+        System.out.println("Bus:这里是乘坐公交车！");
+    }
+}
+public class Car implements TrafficTools {
+    @Override
+    public void running() {
+        System.out.println("Car:这里是乘坐小汽车！");
+    }
+}
+
+//定义一个工厂类
+public class TrafficFactory {
+
+    public TrafficTools getTraffic(String trafficType){
+        if (trafficType == null){
+            return null;
+        } else if (trafficType.equalsIgnoreCase("bus")) {
+            return new Bus();
+        }else if (trafficType.equalsIgnoreCase("airplane")){
+            return new Airplane();
+        }else if (trafficType.equalsIgnoreCase("car")){
+            return new Car();
+        }
+        return null;
+    }
+}
+
+//通过工厂类来实现对象的实例化
+public class FactoryDemo {
+
+    public static void main(String[] args) {
+        TrafficFactory trafficFactory = new TrafficFactory();
+        TrafficTools bus = trafficFactory.getTraffic("bus");
+        TrafficTools airplane = trafficFactory.getTraffic("airplane");
+        TrafficTools car = trafficFactory.getTraffic("car");
+
+        bus.running();
+        car.running();
+        airplane.running();
+    }
+}
+```
+
+**单例模式：**
+
+顾名思义就是这个类只能实例化一个，并提供一个全局访问点来访问该实例（构造函数私有化，所以只能在这个类内部进行实例化）
+
+```java
+public class Single {
+
+    //创建Single的一个实例化
+    private static Single single = new Single();
+
+    //构造方法私有化，该类就不会类的外部被实例化
+    private Single(){}
+
+    //提供全局访问点来访问该实例
+    public static Single getInstance(){
+        return single;
+    }
+    
+    public void print(){
+        System.out.println("我是单例模式！");
+    }
+}
+
+
+
+public class SingleDemo {
+    public static void main(String[] args) {
+
+        //编译出错，因为单例模式构造方式是私有化的
+        //Single single = new Single();
+
+        //获取唯一可用对象
+        Single instance = Single.getInstance();
+
+        //打印信息
+        instance.print();
+    }
+}
+
+```
+
+**注意事项**
+
+- **线程安全**：`getInstance()` 方法中需要使用同步锁 `synchronized (Singleton.class)` 防止多线程同时进入造成实例被多次创建。
+- **延迟初始化**：实例在第一次调用 `getInstance()` 方法时创建。
+- **序列化和反序列化**：重写 `readResolve` 方法以确保反序列化时不会创建新的实例。
+- **反射攻击**：在构造函数中添加防护代码，防止通过反射创建新实例。
+- **类加载器问题**：注意复杂类加载环境可能导致的多个实例问题。
+
+# JVM篇
+
+## 类的加载过程
+
+分为：加载，连接，初始化，使用，卸载
+
+连接又分为：验证，准备，解析
+
+**验证：验证是连接阶段的第一步，这一阶段的目的是确保 Class 文件的字节流中包含的信息符合《Java 虚拟机规范》的全部约束要求，保证这些信息被当作代码运行后不会危害虚拟机自身的安全。**
+
+**准备：准备阶段是正式为类变量分配内存并设置类变量初始值的阶段**，这些内存都将在方法区中分配。
+
+**解析：解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程。** 解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用限定符 7 类符号引用进行。
+
+**初始化：初始化阶段是执行初始化方法 `<clinit> ()`方法的过程，是类加载的最后一步，这一步 JVM 才开始真正执行类中定义的 Java 程序代码(字节码)。**
+
+**类卸载：卸载类即该类的 Class 对象被 GC。**
+
+卸载类需要满足 3 个要求:
+
+1. 该类的所有的实例对象都已被 GC，也就是说堆不存在该类的实例对象。
+2. 该类没有在其他任何地方被引用
+3. 该类的类加载器的实例已被 GC
+
+
+
+### 双亲委派模型的执行流程：
+
+- 在类加载的时候，系统会首先判断当前类是否被加载过。已经被加载的类会直接返回，否则才会尝试加载（每个父类加载器都会走一遍这个流程）
+- **类加载器在进行类加载的时候，它首先不会自己去尝试加载这个类，而是把这个请求委派给父类加载器去完成（调用父加载器 `loadClass()`方法来加载类）**。这样的话，所有的请求最终都会传送到顶层的启动类加载器 **`BootstrapClassLoader`** 中。
+- 只有当父加载器反馈自己无法完成这个加载请求（它的搜索范围中没有找到所需的类）时，子加载器才会尝试自己去加载（调用自己的 `findClass()` 方法来加载类）
+- 如果子类加载器也无法加载这个类，那么它会抛出一个 `ClassNotFoundException` 异常
+
+**JVM 判定两个 Java 类是否相同的具体规则**：JVM 不仅要看类的全名是否相同，还要看加载此类的类加载器是否一样。只有两者都相同的情况，才认为两个类是相同的。即使两个类来源于同一个 `Class` 文件，被同一个虚拟机加载，只要加载它们的类加载器不同，那这两个类就必定不相同。
+
+**双亲委派的好处**
+
+双亲委派模型是 Java 类加载机制的重要组成部分，它通过委派父加载器优先加载类的方式，实现了两个关键的安全目标：避免类的重复加载和防止核心 API 被篡改。
+
+JVM 区分不同类的依据是类名加上加载该类的类加载器，即使类名相同，如果由不同的类加载器加载，也会被视为不同的类。 双亲委派模型确保核心类总是由 `BootstrapClassLoader` 加载，保证了核心类的唯一性。
+
+
+
+
+
+# 多线程篇
+
+## 多线程的实现方法
+
+继承Thread类，重写run方法，创建Thread子类的实例，即创建了线程对象
+
+实现Runnable接口，重写run方法，创建Runnable实现类的实例，将其作为Thread的target来创建Thread对象，Thread对象为线程对象。
+
+```java
+//方法一
+MyThread t1 = new MyThread();//Mythread extend Thread,并且重写了run方法
+
+//方法二
+MyRunnable myRunnable = new MyRunnable();//MyRunnable implement Runnable,并且实现run方法
+Thread t2 = new Thread(myRunnable);
+//方法一和二是没有返回结果的
+
+
+
+//方法三        
+//创建实现Callable接口的任务类，重写有返回值的call方法。
+//创建FutureTask对象管理多线程运行的结果，创建一个Thread类对象，开启线程。返回值用ft.get()
+
+
+//方法四   创建线程池（如果只问三种的话）
+```
+
+## 线程池的常见参数有哪些？
+
+1.核心线程数：创建好一直存在直到关闭线程池
+
+2.最大线程数：最大线程数=核心线程数+临时线程数
+
+3.临时线程存活时间
+
+4.阻塞队列：当核心线程都在工作时，新来的任务就会被加入到阻塞队列中，任务队列已满，但是线程数没有达到最大线程数，就会创建临时线程执行任务
+
+5.如果当前同时运行的线程数量达到最大线程数量并且队列也已经被放满了任务时，线程池执行饱和策略，比如说抛出异常拒绝接受任务，也可以将任务丢弃，退还等
+
+CPU密集型     计算比较多    CPU 核心数+1
+
+I/O密集型  读取文件比较多  2*N（CPU核心数）
+
+## ThreadLocal是什么？
+
+ThreadLocal是一种线程隔离机制，保证了在多线程的环境下对共享变量访问的一个安全性，ThreadLocal使用空间换时间的思想，在每一个线程中都有一个容器，存储共享变量的一个副本。那么每一个线程只对自己的变量副本进行更新操作，从而解决线程安全问题。具体实现原理是Thread类中都有一个ThreadLocalMap的变量存储
+
+
+
+
+
+
+
+
+
+## 乐观锁和悲观锁
+
+乐观锁：乐观锁**假定数据一般不会出现并发错误，只有在数据要提交更新的时候，才会对数据是否产生并发冲突进行检查**
+
+悲观锁：总是假设最坏的情况，**每次去拿数据的时候都认为别人会修改，所以每次在拿数据的时候都会上锁**
+
+# 计算机网络篇
+
+## 1.从浏览器地址栏输入 url 到显示主页的过程
+
+- DNS解析：将域名解析成对应的IP地址
+- TCP连接：与服务器三次握手建立连接
+- 向服务器发送HTTP请求
+- 服务器处理请求并响应请求给浏览器
+- 浏览器解析并渲染页面
+- 断开连接：TCP四次挥手
+
+## 2.socket和Websocket区别
+
+Socket 其实就是等于 **IP 地址 + 端口 + 协议**
+
+WebSocket 是一个持久化的协议，用来解决 **http 不支持持久化连接**的问题
+
+Socket 一个是**网编编程的标准接口**，而 WebSocket 则是应用层通信协议。
+
+## 3.说说 HTTP 常用的状态码及其含义？
+
+HTTP状态码首先应该知道个大概的分类：
+
+- **1XX：信息性状态码**
+- **2XX：成功状态码**
+- **3XX：重定向状态码**
+- **4XX：客户端错误状态码**
+- **5XX：服务端错误状态码**
+
+## 4.HTTP 有哪些请求方式？
+
+GET：对服务器获取资源的简单请求
+
+POST：向服务器提交数据
+
+PUT：修改指定资源
+
+DELETE：删除url标记的指定资源
+
+HEAD：获取url标记资源的首部
+
+## 5.GET和POST请求的区别？
+
+传参不同：get是通过url，将信息放在url尾部；而post将信息放在请求体中
+
+安全性不同：信息放在url是不安全的，而放在请求体中较为安全
+
+可被缓存不同：get请求可以被缓存在浏览器中（大大减少了 Web 服务器的负担），而post请求是不能被缓存的
+
+## 6.说一下HTTP的报文结构？
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 说说Session 和 Cookie 有什么联系和区别?
+
+Cookie 是保存在客户端的一小块文本串的数据，当客户端与服务端建立连接后，客户端向服务端发起请求，服务端会向客户端发送一个Cookie，客户端就把该Cookie保存起来，每当客户端向服务端发起请求时，就会把该Cookie携带着，以便服务端根据这个Cookie来判断用户的身份和状态
+
+Session 指的就是服务器和客户端一次会话的过程。而Session是保存在服务器上，客户端浏览器访问服务器时，服务器以某种形式将客户端的信息记录在服务器上，这就是Session，客户端再次向服务器发起请求时，只需从Session中查找用户的状态
+
+![image-20250527172643853](C:\Users\Tibet\AppData\Roaming\Typora\typora-user-images\image-20250527172643853.png)
+
+**Session 和 Cookie 到底有什么不同呢？**
+
+- 存储位置不一样，Cookie 保存在客户端，Session 保存在服务器端。
+
+- 存储数据类型不一样，Cookie 只能保存ASCII，Session可以存任意数据类型，一般情况下我们可以在 Session 中保持一些常用变量信息，比如说 UserId 等。
+- 有效期不同，Cookie 可设置为长时间保持，比如我们经常使用的默认登录功能，Session 一般有效时间较短，客户端关闭或者 Session 超时都会失效。
+- 隐私策略不同，Cookie 存储在客户端，比较容易遭到不法获取，早期有人将用户的登录名和密码存储在 Cookie 中导致信息被窃取；Session 存储在服务端，安全性相对 Cookie 要好一些。
+- 存储大小不同， 单个Cookie保存的数据不能超过4K，Session可存储数据远高于 Cookie。
+
+
+
+
+
+## TCP和UDP的区别
+
+TCP是面向连接的，可靠传输，字节流，效率慢，所需资源多
+
+UDP不是面向连接，不可靠传输，数据报文，效率快，所需资源少
+
+### 应用场景
+
+TCP：文件传输，收发邮件
+
+UDP：广播通信，语音通话
+
+
+
+## JWT的工作机制
+
+JWT的工作原理涉及令牌的生成，传输和验证过程
+
+生成令牌：选择合适的算法生成token令牌
+
+传输令牌：将生成的JWT发生给需要访问信息的一方，通常通过HTTP标头进行传输，令牌可以放在请求的标头中
+
+验证令牌：接收方获取JWT，并提取其中token，验证是否一致。
+
+
+
+# 框架篇
+
+## 什么是IOC？
+
+IOC控制反转，是一种设计思想，就是原来需要在代码中手动创建对象的控制权交给Spring框架来管理，将对象之间的依赖关系交给IOC容器来管理，并由IOC容器完成对象的依赖注入
+
+## 什么是AOP，怎么实现？
+
+面向切面编程，把我们程序重复的代码抽取出来，在需要执行的时候使用动态代理技术在不修改源码的基础上，对我们的已有方法进行增强。
+
+比如说日志记录：自定义日志记录注解，利用 AOP，一行代码即可实现日志记录。
+
+如果我们想要记录每个业务的日志，不使用AOP的话，我们就需要在每个业务代码上添加日志代码，这将会导致大量冗余代码。
+
+**如何实现？**
+
+AOP 的常见实现方式有动态代理、字节码操作等方式。
+
+Spring AOP 就是基于动态代理的，如果要代理的对象，实现了某个接口，那么 Spring AOP 会使用 **JDK Proxy**，去创建代理对象，而对于没有实现接口的对象，就无法使用 JDK Proxy 去进行代理了，这时候 Spring AOP 会使用 **Cglib** 生成一个被代理对象的子类来作为代理，如下图所示：
+
+
+
+
+
+
+
+
+
+
+
+# MySQL篇
+
+## SQL优化
+
+批量插入数据时尽量手动提交事务，大批量插入时使用load指令
+
+主键插入尽量顺序插入，乱序插入的话可能会导致页分裂，删除可能会导致页合并
+
+分组查询走索引可以提高效率
+
+update时where要根据索引字段来更新，不然会将行锁升级为表锁，效率低
+
+select时尽量根据索引字段来查询，避免进行回表查询，效率低
+
 
 
 
